serviço de recuperação de senha parcialmente concluído